--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,9 @@ inputs:
   token:
     description: 'your GITHUB_TOKEN'
     required: true
+  run_id:
+    description: 'The workflow ID running the Veracode Pipeline Scan'
+    required: true    
 runs:
   using: 'node20'
   main: 'dist/index.js'
