--- a/action.yml
+++ b/action.yml
@@ -23,8 +23,11 @@ inputs:
   source_repository:
     description: 'Source Repository'
     required: false
-  fail_checks:
-    description: 'Fail Checks'
+  fail_checkson_on_policy:
+    description: 'Fail Checks if Policy Fails'
+    required: false
+  fail_checks_on_error:
+    description: 'Fail Checks if there are Build Errors'
     required: false
 runs:
   using: 'node20'
