--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
+    "@actions/artifact": "^2.1.4",
     "@octokit/rest": "^20.0.2",
     "sjcl": "^1.0.8"
   }
